# rrino

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md
src/: args.rs  http.rs  main.rs  msg.rs  notify.rs
ssh_configs/: config
weechat_plugins/: rrino.py
