[package]
name = "rrino"
version = "0.1.0"
authors = ["Bigo <bigo@crisidev.org>"]
description = "Remote Irssi Notifier - OSX version - Implemented in Rust"
documentation = "https://github.com/crisidev/rrino/blob/master/README.md"
keywords = ["ssh", "irc", "notification"]
license = "MIT"
repository = "https://github.com/crisidev/rrino"

[dependencies]
hyper = "0.11.6"
futures = "0.1.17"
serde = "1.0.19"
serde_json = "1.0.5"
log = "0.3.8"
pretty_env_logger = "0.1.1"
clap = "2.27.1"
chan-signal = "0.3.1"
chan = "0.1.19"
tokio-core = "0.1"

[dependencies.clippy]
optional = true
version = "*"

[features]
default = []
dev = ["clippy"]
