[package]
name = "rrino"
version = "0.1.0"
authors = ["Bigo <bigo@crisidev.org>"]
description = "Remote Irssi Notifier - OSX version - Implemented in Rust"
documentation = "https://github.com/crisidev/rrino/blob/master/README.md"
keywords = ["ssh", "irc", "notification"]
license = "MIT"
repository = "https://github.com/crisidev/rrino"

[dependencies]
log = "0.3"
pretty_env_logger = "0.1"
clap = "2.27"
chan-signal = "0.3"
chan = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.8"
regex = "0.2"
rocket = { path = "../Rocket/lib" }
rocket_codegen = { path = "../Rocket/codegen" }

[dependencies.rocket_contrib]
path = "../Rocket/contrib"
default-features = false
features = ["json"]

[dependencies.clippy]
optional = true
version = "*"

[features]
default = []
dev = ["clippy"]
